--- a/app/globals.css
+++ b/app/globals.css
@@ -81,4 +81,20 @@
 
 html {
   scroll-behavior: smooth;
+  background-color: #fff;
+}
+
+html,
+body {
+  @apply hide-scrollbar;
+}
+
+@layer utilities {
+  .hide-scrollbar {
+    -ms-overflow-style: none; /* IE and Edge */
+    scrollbar-width: none; /* Firefox */
+  }
+  .hide-scrollbar::-webkit-scrollbar {
+    display: none; /* Chrome, Safari and Opera */
+  }
 }
